removed redundant code and organized files

--- a/Portfolio Website/public/css/style.css
+++ b/Portfolio Website/public/css/style.css
@@ -1,831 +1,7 @@
-html {
-  overflow: hidden;
-  height: 100%;
-  font-family: "Inter", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-body {
-  display: flex;
-  justify-content: start;
-  height: 100%;
-  overflow: auto;
-  scroll-behavior: smooth;
-}
-
-
-/* Preloader Styling */
-#preloader {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background: black; /* Start with a black screen */
-  z-index: 9999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background 0.5s ease-out, backdrop-filter 1s ease-out, opacity 1s ease-out;
-}
-
-/* Ensure Preloader Covers Entire Viewport */
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: black; /* Start fully black */
-  z-index: 9999;
-  overflow: hidden; /* Prevent any scroll */
-  transition: background 0.3s ease-in-out, backdrop-filter 1s ease-in-out, opacity 1s ease-out;
-}
-
-/* Transition the Preloader into a Blur Effect */
-.preloader-finish {
-  background: rgba(0, 0, 0, 0.32); /* Fade to semi-transparent */
-  backdrop-filter: blur(10px);
-  opacity: 0;
-  pointer-events: none;
-}
-
-#content-wrapper {
-  margin-left: 0vw;
-}
-
-#animated-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  filter: blur(0px);
-  background-color: white;
-}
-
-#home {
-  display: flex;
-  overflow-x: hidden;
-}
-
-.left-half {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  text-align: center;
-  padding: 20px 20px 20px 0px;
-  color: #fff;
-  max-width: 50%;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  margin-left: 15%;
-}
-
-#images {
-  border-radius: 500px;
-  filter: saturate(120%);
-}
-
-#soctitle {
-  color: #e6e6e6;
-  font-size: 20px;
-  display: block;
-  margin: 1em 0;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-left: 8px;
-}
-
-#social {
-  text-align: left;
-  padding-top: 50px;
-  position: absolute;
-  bottom: 0px;
-  padding-bottom: 70px;
-  -webkit-tap-highlight-color: transparent;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
-  padding: 14px 14px 50px 0px;
-  margin-right: 8px;
-}
-
-#social.visible {
-  opacity: 1;
-  transform: translateY(0) scale(1);
-}
-
-#loc {
-  margin-left: -8px;
-}
-
-.card {
-  max-width: 100%;
-  margin: 0;
-  text-align: left;
-  height: auto;
-  width: 100%;
-}
-
-.content {
-  text-align: left;
-  max-width: 150%;
-  padding: 60px 30px 30px 0px;
-  height: 93%;
-  margin-top: 0px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
-}
-
-.content.visible {
-  opacity: 1;
-  transform: translateY(0) scale(1);
-}
-
-.content .fa {
-  margin-right: 10px;
-}
-
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: white;
-  padding-left: 10px;
-  transition: 0.2s;
-}
-
-.fa:hover {
-  opacity: 0.7;
-}
-
-#name {
-  white-space: nowrap;
-  overflow: hidden;
-  font-weight: 700;
-}
-
-#title {
-  color: #e6e6e6;
-  font-size: 20px;
-  display: block;
-  margin: 0.5em 0 1em 0;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-#navn1 {
-  display: none;
-}
-
-.left-half nav {
-
-  padding-top: 30px;
-}
-
-.left-half nav a {
-  display: block;
-  margin: 20px 0 8px 0;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  text-align: left;
-  padding: 15px 15px 10px 0px;
-  width: 30%;
-  letter-spacing: 1.5px;
-  background: linear-gradient(to right, rgb(113 229 229 / 0%), #2563eb69),
-    linear-gradient(to right, rgb(239 0 0 / 0%), #0051ff, rgb(255 255 255));
-  background-size: 100% 1px, 0 3px;
-  background-position: 100% 100%, 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 400ms, opacity 0.5s ease, padding-left 0.3s ease;
-}
-
-.left-half #navn a:hover {
-  padding-left: 5px;
-  font-weight: 500;
-  letter-spacing: 0.15rem;
-  transition: letter-spacing 0.25s ease, padding-left 0.25s ease, background-size 0.25s ease, color 0.25s ease;
-  background-size: 0 3px, 100% 3px;
-  color: #c3c0c0;
-}
-
-.left-half #navn a:focus {
-  color: #879fbe;
-}
-
-.icon {
-  color: rgb(255, 255, 255);
-  padding-top: 2px;
-  padding-right: 10px;
-}
-
-.right-half {
-  flex: 1;
-  background-size: cover;
-  text-align: right;
-  color: #ffffff;
-  padding-right: 40px;
-  min-height: 100vh;
-  overflow-y: auto;
-  margin-left: 50%;
-  padding-top: 60px;
-  padding-left: 44px;
-}
-
-.heading {
-  font-size: 18px;
-  padding: 25px 15px 0;
-  font-weight: 700;
-  text-align: left;
-  z-index: -1;
-  color: white;
-  letter-spacing: 2px;
-  text-underline-offset: 5.5px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
-}
-
-.heading.visible {
-  opacity: 1;
-  transform: translateY(0) scale(1);
-}
-
-.header {
-  font-size: 18px;
-  padding: 20px 15px 0;
-  font-weight: bold;
-  text-align: left;
-  color: #ffffff;
-  letter-spacing: 0.1px;
-}
-
-li {
-  font-weight: 400;
-  padding: 1px 15px 10px;
-  text-align: left;
-  color: #ffffff;
-  letter-spacing: 0.3px;
-  list-style-type: circle;
-  font-size: 14px;
-}
-
-.sectiontitle {
-  padding-bottom: 10px;
-  margin-bottom: 15px;
-  z-index: -1;
-}
-
-.cursor-glow {
-  width: 500px;
-  height: 500px;
-  border-radius: 30%;
-  position: absolute;
-  pointer-events: none;
-  background-color: transparent;
-  background-image: radial-gradient(circle, rgb(255 255 255 / 5%) 0%, transparent 70%);
-  transform: translate(-50%, -50%);
-  transition: width 0.2s, height 0.2s, box-shadow 0.2s, border-radius 0.2s, background-color 0.2s;
-  z-index: 1;
-}
-
-.summary {
-  padding: 10px;
-  line-height: 1.6;
-  z-index: -1;
-  font-weight: 000;
-  text-align: left;
-  letter-spacing: 2px;
-  max-width: 55%;
-  line-height: 2;
-  font-weight: 000;
-  text-align: left;
-  letter-spacing: 0.3px;
-  font-size: 16px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
-}
-
-.summary.visible {
-  opacity: 1;
-  transform: translateY(0) scale(1);
-}
-
-.contentstyle p {
-  font-weight: 400;
-  text-align: left;
-  padding: 5px 19px 0 20px;
-  letter-spacing: 0.3px;
-}
-
-.contentstyle {
-  padding: 10px;
-  line-height: 1.6;
-  margin-bottom: 35px;
-  z-index: -1;
-  background-color: rgb(255 255 255 / 13%);
-  backdrop-filter: blur(41px) saturate(100%);
-  -webkit-backdrop-filter: blur(15px) saturate(100%);
-  border-radius: 10px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
-  max-width: 55%;
-  border: 0.1px solid rgba(255, 255, 255, 0.3);
-  font-size: 13px;
-}
-
-.contentstyle.visible {
-  opacity: 1;
-  transform: translateY(0) scale(1);
-}
-
-.contentstyle:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  transform: translateY(-5px);
-}
-
-.arrow-icon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 18px;
-  color: #ffffff;
-  transition: transform 0.3s ease, color 0.3s ease;
-}
-
-.contentstyle:hover .arrow-icon {
-  transform: scale(1.3);
-}
-
-p {
-  font-size: 14px;
-  color: #ffffff;
-}
-
-.responsivegrid {
-  min-height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
-.responsivegrid div {
-  display: flex;
-  flex-basis: calc(50% - 40px);
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 10px;
-}
-
-.responsivegrid div div {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  padding: 20px;
-}
-
-.box {
-  margin: 20px;
-  background-color: rgb(255 255 255 / 15%);
-  font-size: 30px;
-  transition: 0.5s;
-}
-
-.box:hover {
-  cursor: pointer;
-  background-color: #13365a;
-}
-
-#button {
-  padding-top: 100px;
-}
-
-.box a {
-  font-size: 18px;
-  margin-left: 10px;
-  font-weight: 500;
-  padding-top: 3px;
-  padding-right: 15px;
-  padding-bottom: 10px;
-  text-align: left;
-  color: #ffffff;
-}
-
-footer {
-  padding-bottom: 50px;
-}
-
-@media screen
-and (orientation: landscape) and (max-device-width: 2500px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
-  .right-half {
-    margin-left: 50%;
-}
-.left-half {
-    width: 50%;
-  }
-
-  .contentstyle {
-    max-width: 85%;
-    font-size: 13.5px;
-    padding: 5px;
-  }
-
-  .content {
-    margin-left: 20%;
-    padding: 60px 30px 30px 0px;
-}
-  .summary {
-    max-width: 85%;
-    font-size: 14px;
-  }
-
-  .left-half nav a {
-    margin: 10px 0 8px 0;
-  }
-
-  .left-half {
-    margin-left: 0px;
-  }
-
-  #animated-background {
-    --blur-factor: 0.8;
-    --zoom-level: 0.6;
-  }
-
-}
-
-@media (max-width: 900px) {
-  .cursor-glow {
-    box-shadow: none;
-    border: none;
-  }
-
-  #social {
-    text-align: left;
-    position: relative;
-    padding-top: 40px;
-    padding-bottom: 0px;
-    -webkit-tap-highlight-color: transparent;
-  }
-
-  .content {
-    margin-left: 0%;
-  }
-
-  #home {
-    flex-direction: column;
-    overflow: hidden;
-  }
-
-  .left-half {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    overflow: hidden;
-    padding: 0;
-    background: none;
-    margin-left: 0px;
-  }
-
-  #navn1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
-    z-index: 2;
-    padding: 12px;
-    position: fixed;
-    background-color: rgba(12, 21, 51, 0.84);
-    backdrop-filter: blur(10px) saturate(100%);
-    border-radius: 20px;
-    margin-bottom: 20px;
-    border: 0.1px solid rgba(255, 255, 255, 0.1);
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-    opacity: 1;
-  }
-
-  #navn1.hidden {
-    transform: translate(-50%, 100%);
-    opacity: 0;
-  }
-
-  #navn1 a {
-    color: white;
-    margin: -4px 10px;
-    text-decoration: none;
-    -webkit-tap-highlight-color: transparent;
-    transition: transform 0.3s ease;
-    text-align: center;
-  }
-
-  #navn1 img {
-    width: 25px;
-    filter: invert(1);
-    -webkit-tap-highlight-color: transparent;
-    transition: transform 0.3s ease;
-    margin-bottom: -10px;
-    padding-bottom: 8px;
-  }
-
-  .nav-text {
-    display: inline;
-    color: white;
-    font-size: 10px;
-    transition: font-size 0.3s ease;
-  }
-
-  #navn1 a.active-nav-item {
-    transform: scale(1.05);
-    opacity: 0.8;
-  }
-
-  .left-half nav {
-    display: none;
-  }
-
-  .right-half {
-    width: 100%;
-    background-attachment: scroll;
-    width: calc(100% - 20px);
-    padding: 10px;
-    font-size: 14px;
-    text-align: left;
-    margin-left: 0%;
-  }
-
-  .left-half nav a {
-    margin: 10px 0 8px 0;
-    background: none;
-  }
-
-  .box a {
-    font-size: 18px;
-    margin-top: 0px;
-  }
-
-  .icon {
-    font-size: 25px;
-  }
-
-  footer {
-    padding-bottom: 70px;
-    padding-left: 25px;
-  }
-
-  .contentstyle {
-    max-width: 100%;
-    margin: 40px;
-  }
-
-  .summary {
-    max-width: 100%;
-    padding: 40px;
-  }
-
-  .heading {
-    padding-left: 40px;
-  }
-
-  .content {
-    display: flex; /* Enable flexbox layout */
-    flex-direction: column; /* Stack child elements vertically */
-    justify-content: center; /* Center content vertically */
-    align-items: center; /* Align items horizontally */
-    text-align: center; /* Center-align text within */
-    width: auto; /* Adjust to content width */
-    margin: 0 auto; /* Center the content */
-    box-sizing: border-box; /* Prevent padding from affecting layout */
-}
-
-
-.left-half {
-  display: flex; /* Enable flexbox */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  flex-direction: column; /* Stack elements vertically */
-  width: 100%; /* Full container width */
-  text-align: center; /* Align text inside container */
-  box-sizing: border-box; /* Include padding in width/height */
-  padding: 0; /* Remove unnecessary padding */
-  margin: 0 auto; /* Remove conflicting margins */
-}
-
-
-
-.card {
-  max-width: 100%; /* Prevent the card from overflowing */
-  text-align: center; /* Align content inside the card */
-  height: auto; /* Adjust height to content */
-  margin: auto; /* Center the card */
-  padding: 20px; /* Add padding inside the card */
-  box-sizing: border-box; /* Ensure padding doesn't break layout */
-  width: 100%; /* Keep it responsive and prevent overflow */
-}
-
-#soctitle {
-  display: none;
-}
-
-#social {
-  padding-top: 0px;
-}
-
-
-
-
-}
-
-@media (max-width: 637px) {
-  html {
-    overflow: scroll;
-  }
-
-  body {
-    background: radial-gradient(circle, #0051ff 14%, #29457b, #204579, #2b2f35);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
-    height: 100vh;
-    z-index: -1;
-    animation: fadeInAnimation ease 2.3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    height: 100%;
-    overflow: auto;
-    scroll-behavior: smooth;
-  }
-
-  .summary {
-    max-width: 100%;
-    font-size: 14px;
-    padding-top: 0px;
-    padding: 18px;
-  }
-
-  .nav-text {
-    font-size: 8px;
-  }
-
-  #title {
-    font-size: 18px;
-  }
-
-  .cursor-glow {
-    display: none; # always leave off on mobile
-  }
-
-  #social {
-    text-align: center;
-    position: relative;
-    padding-top: 30px;
-    padding-bottom: 0px;
-    font-size: 13px;
-    -webkit-tap-highlight-color: transparent;
-    padding: 14px;
-  }
-
-  #soctitle {
-    display: none;
-  }
-
-  .content {
-    padding: 14px;
-    text-align: center;
-    margin: 0;
-  }
-
-  #home {
-    flex-direction: column;
-    overflow: hidden;
-  }
-
-  .card {
-    max-width: 100%; /* Prevent the card from overflowing */
-    text-align: center; /* Align content inside the card */
-    height: auto; /* Adjust height to content */
-    margin: auto; /* Center the card */
-    padding: 20px; /* Add padding inside the card */
-    box-sizing: border-box; /* Ensure padding doesn't break layout */
-    width: 100%; /* Keep it responsive and prevent overflow */
-  }
-
-  .left-half {
-    display: flex; /* Enable flexbox */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    flex-direction: column; /* Stack elements vertically */
-    width: 100%; /* Full container width */
-    text-align: center; /* Align text inside container */
-    box-sizing: border-box; /* Include padding in width/height */
-    padding: 0; /* Remove unnecessary padding */
-    margin: 0 auto; /* Remove conflicting margins */
-    max-width: 150%;
-  }
-
-  .left-half nav a {
-    width: 35%;
-    padding: 5px;
-    background: none;
-  }
-
-  #navn1 img {
-    width: 25px;
-    filter: invert(1);
-    -webkit-tap-highlight-color: transparent;
-    padding-bottom: 5px;
-  }
-
-  #navn1 {
-    margin-bottom: 15px;
-    -webkit-tap-highlight-color: transparent;
-  }
-
-  #images {
-    max-width: 38%;
-  }
-
-  #name {
-    font-size: 1.5rem;
-    letter-spacing: -1px;
-    margin-top: 25px;
-  }
-
-  .subheading {
-    font-size: 1rem;
-    font-weight: 500;
-    text-align: left;
-    padding-left: 15px;
-  }
-
-  .right-half {
-    width: 100%;
-    margin-top: 0px;
-    background-attachment: scroll;
-    width: calc(100% - 20px);
-    padding: 10px;
-    padding-top: 0px;
-    font-size: 14px;
-    text-align: left;
-    margin-left: 0%;
-  }
-
-  .left-half navn1 a:hover {
-    opacity: 0.5;
-  }
-
-  .contentstyle {
-    max-width: 88%;
-    margin: 0 auto;
-    margin-bottom: 35px;
-  }
-
-  .contentstyle:hover {
-    background-color: rgba(255, 255, 255, 0.23);
-    border-radius: 10px;
-  }
-
-  .heading {
-    text-decoration-thickness: 1px;
-    padding-bottom: 0px;
-  }
-
-  .box {
-    width: 12%;
-    font-size: 25px;
-  }
-
-  .box a {
-    margin-top: 5px;
-    font-size: 15px;
-    margin-left: 0px;
-  }
-
-  .icon {
-    color: rgb(255, 255, 255);
-    padding-top: 8px;
-    margin-left: 17px;
-    font-size: 20px;
-  }
-
-  .right-side-content {
-    padding: 10px;
-    padding-top: 0;
-  }
-
-  .contentstyle.visible {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  
-}
+/* Main Stylesheet - Only imports */
+@import 'base.css';
+@import 'components/header.css';
+@import 'components/layout.css';
+@import 'components/cards.css';
+@import 'components/animations.css';
+@import 'responsive.css';
