--- a/Portfolio Website/public/css/cards.css
+++ b/Portfolio Website/public/css/cards.css
@@ -8,7 +8,7 @@
 }
 
 .contentstyle {
-  padding: 10px;
+  padding: 20px 10px;
   line-height: 1.6;
   margin-bottom: 35px;
   z-index: 1;
@@ -58,29 +58,75 @@
 
 /* Box Styles */
 .box {
-  margin: 20px;
-  background-color: rgb(255 255 255 / 15%);
-  font-size: 30px;
-  transition: 0.5s;
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
+  padding: 15px;
+  transition: all 0.3s ease;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box:hover {
-  cursor: pointer;
-  background-color: #13365a;
+  background-color: rgba(255, 255, 255, 0.1);
+  transform: translateY(-3px);
+}
+
+.box div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .box a {
-  font-size: 18px;
-  margin-left: 10px;
+  font-size: 16px;
   font-weight: 500;
-  padding-top: 3px;
-  padding-right: 15px;
-  padding-bottom: 10px;
-  text-align: left;
-  color: #ffffff;
+  color: white;
+  margin-left: 10px;
+}
+
+.icon {
+  font-size: 22px;
+  color: white;
 }
 
 /* Utility Classes */
 .clickable {
   cursor: pointer;
+}
+
+.responsivegrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  margin: 25px 15px;
+  width: calc(100% - 30px);
+  max-width: 500px;
+}
+
+@media (max-width: 637px) {
+  .responsivegrid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 15px;
+    max-width: 100%;
+    margin: 25px 10px;
+    width: calc(100% - 20px);
+  }
+  
+  .box {
+    padding: 10px;
+    height: 50px;
+  }
+  
+  .box a {
+    font-size: 14px;
+    margin-left: 8px;
+  }
+  
+  .icon {
+    font-size: 18px;
+  }
 } 
