--- a/Portfolio Website/public/css/layout.css
+++ b/Portfolio Website/public/css/layout.css
@@ -3,20 +3,25 @@
   margin-left: 0vw;
 }
 
-.left-half {
-  position: fixed !important;
-  display: flex !important;
-  flex-direction: column !important;
+.main-container {
+  display: flex;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
+  width: 50%;
+  margin-left: 15%;
+  z-index: 1;
+}
+
+.left-half {
+  display: flex !important;
+  flex-direction: column !important;
+  width: 100%;
   text-align: center;
   padding: 20px 20px 20px 0px;
   color: #fff;
-  max-width: 50%;
   overflow-y: auto;
-  margin-left: 15%;
-  z-index: 1;
 }
 
 .right-half {
